# quickshell-bar

./: .gitignore  BUILD_INSTRUCTIONS.md  Globals.qml  LICENSE  README.md  layoutswitch.qml  qmldir  shell.qml  windows.qml
VirtualDesktopPlugin/: CMakeLists.txt  plugin.cpp  virtualdesktopmanager.cpp  virtualdesktopmanager.h
linux/: shell.qml
windows/: BUILD.md  PLUGIN_QUICK_START.md  PLUGIN_USAGE.md  VirtualDesktopMonitor.ps1  WINDOWS_QML_DOCUMENTATION.md  build.bat  build.ps1  desktop_state.json  windows.qml
windows/VirtualDesktop/: qmldir
windows/VirtualDesktopPlugin/: CMakeLists.txt  virtualdesktopmanager.cpp  virtualdesktopmanager.h
